# ReCUR

./: .env.example  .gitignore  README.md  pyproject.toml  recur.py
agents/: __init__.py  alternative_responder.py  base_responder.py  final_selector.py  round_counter.py
cli/: __init__.py  recur_cli.py
config/: default.yaml  example.yaml
core/: __init__.py  context.py  llm.py  models.py  utils.py
graders/: __init__.py  rubric_grader.py
rubrics/: code.txt  education.txt  general.txt
tests/: test_llm.py  test_pipeline.py
